# rash

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cool prompt  cool prompt2  flake.nix  package.nix  result
.forgejo/workflows/: build.yaml
.woodpecker/: build.yaml
doc/: BUILD.md  USER_GUIDE.md
examples/: hello_world.rash  prompt.rash  rashrc.rash  ssh_agent.rash
src/: alias.c  alias.h  ansi.c  ansi.h  argv0.h  builtins.c  builtins.h  dynamic_sprintf.c  dynamic_sprintf.h  enviroment.c  enviroment.h  environment.c  environment.h  execute.c  execute.h  file_reader.c  file_reader.h  hash_map.c  hash_map.h  history.c  interactive.h  jobs.c  jobs.h  lexer.c  lexer.h  line_reader.c  line_reader.h  main.c  one_shot.c  one_shot.h  optional.h  rashrc.c  rashrc.h  search_path.c  search_path.h  shell_vars.c  shell_vars.h  shlvl.c  shlvl.h  should_exit.h  (+6 more)
src/builtins/: builtins.h  find_builtin.c  find_builtin.h  utils.c  utils.h
src/builtins/commands/: alias.c  bg.c  cd.c  env.c  eval.c  exec.c  exit.c  export.c  false.c  fg.c  help.c  history.c  jobs.c  mkdir.c  pwd.c  setenv.c  setvar.c  source.c  test.c  time.c  true.c  unsetenv.c  unsetvar.c  var.c  version.c  which.c
src/interpreter/: evaluate.c  evaluate.h  execute.c  execute.h  glob.c  glob.h  lex.c  lex.h  parser.c  parser.h  preprocess.c  preprocess.h  repl.c  repl.h
src/lib/: ansi.c  ansi.h  attrib.h  buffer.c  buffer.h  cstrlist.h  dynamic_sprintf.c  dynamic_sprintf.h  error.c  error.h  f_error.c  f_error.h  hash_map.c  hash_map.h  is_ident.c  is_ident.h  linked_list.h  next_pow_2.c  next_pow_2.h  optional.h  parse.c  parse.h  search_path.c  slice.h  sort.c  sort.h  string.c  string.h  sys.c  sys.h  utf_8.c  utf_8.h  vec_types.c  vec_types.h  vector.h
src/line_reader/: action_utils.c  action_utils.h  actions.c  actions.h  actions_all.c  actions_all.h  auto_complete.c  auto_complete.h  draw.c  draw.h  history.c  history.h  line_reader.c  line_reader.h  line_reader_struct.h  modify_line.c  modify_line.h  prompt.c  prompt.h  raw_mode.c  raw_mode.h  types.h  utils.c  utils.h
src/line_reader_new/: actions.c  actions.h  all_actions.c  all_actions.h  ansi.h  completions.c  history.c  history.h  line_reader.c  line_reader.h  line_reader_struct.h  modify_line.c  modify_line.h  utf_8.c
src/line_reader_old/: auto_complete.c  auto_complete.h
src/line_reader_rs/: Makefile  main.rs  rust_eh_personality.c
src/shell_vars/: eval.c  eval.h  lexer.c  lexer.h  shell_vars.c  shell_vars.h  token.c  token.h  util.c  util.h
src/strings/: help.c  strings.h  version.c
test/: fuzz.sh  test.h  test_buffer.c  test_hash_map.c  test_ll.c
tests/: fuzz.sh
